--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGODB_URI=mongodb+srv://reconstructoraantigua:bpTyzg1XREO1KcEC@cluster0.t6q15.mongodb.net/inventario?retryWrites=true&w=majority&tls=true&tlsAllowInvalidCertificates=true
+# MONGODB_URI=mongodb+srv://muestra:123456asdf@cluster0.t6q15.mongodb.net/inventario?retryWrites=true&w=majority&tls=true&tlsAllowInvalidCertificates=true
+MONGODB_URI=mongodb+srv://muestra:123456asdf@cluster0.hryxv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 JWT_SECRET=tu_secreto_seguro_para_jwt
